# AdventOfCode

./: .gitignore  aot.gpr
AoC2019/: alire.toml  aoc2019.gpr
AoC2019/inputs/: day01.output
AoC2019/src/: aoc2019_day01.adb  aoc2019_day02.adb
AoC2020/src/: AoC2020_Day01.ap  AoC2020_Day01.fs
AoC2021/: build.gpr  day_11_part_1.adb
AoC2021/src/: day_01_part_1.adb  day_01_part_2.adb  day_02_part_1.adb  day_03_part_2.adb  day_04.adb  day_04.ads  day_04_part_1.adb  day_05.adb  day_05_part_2.adb  day_06.adb  day_06_part_1.adb  day_07.ads  day_07_part_1.adb  day_08.adb  day_08.ads  day_08_part_1.adb  day_09.adb  day_09.ads  day_09_part_2.adb  day_1.adb  day_10.adb  day_10.ads  day_10_part_1.adb  day_10_part_2.adb
AoC2022/: AoC2022.opam  dune-project
AoC2022/Ada/: aoc2022_day01.adb
AoC2022/inputs/: day01.output  day02.output  day05.output  day06.output
AoC2022/test/: dune
old/: README.md  aoc.gpr
old/AoC2021/src/: day_01_part_2.adb  day_02_part_2.adb  day_03_part_1.adb  day_04_part_2.adb  day_05.ads  day_05_part_1.adb  day_06.ads  day_06_part_2.adb  day_07.adb  day_07_part_2.adb  day_08_part_2.adb  day_09_part_1.adb
old/src/: aoc.adb  aoc.ads  main.adb
src/: aoc.ads  main.adb
