(lang dune 3.4)

(name AoC2022)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "José Antonio Verde Jiménez")

(maintainers "José Antonio Verde Jiménez")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name AoC2022)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
